The game field element basic implementation

--- a/sudoku/index.html
+++ b/sudoku/index.html
@@ -13,6 +13,10 @@
   <body>
     <h1>Sudoku Demo</h1>
 
-    <div id="container"></div>
+    <p>
+      <div id="container"></div>
+    </p>
+
+    <p class="white-space"></p>
   </body>
 </html>
