--- a/hiscore/index.html
+++ b/hiscore/index.html
@@ -18,7 +18,9 @@
               s1.add(event.target.value());
             }
           });
-
+          $('#default a.add').on("click", function() {
+            s1.add($("#default p input")[0].value()); return false;
+          });
           $('#default a.clear').on("click", function() {
             s1.clear(); return false;
           });
@@ -28,7 +30,9 @@
               s2.add(event.target.value());
             }
           });
-
+          $('#reverse a.add').on("click", function() {
+            s2.add($("#default p input")[0].value()); return false;
+          });
           $('#reverse a.clear').on("click", function() {
             s2.clear(); return false;
           });
@@ -38,7 +42,9 @@
               s3.add(event.target.value());
             }
           });
-
+          $('#limitless a.add').on("click", function() {
+            s3.add($("#limitless p input")[0].value()); return false;
+          });
           $('#limitless a.clear').on("click", function() {
             s3.clear(); return false;
           });
@@ -53,6 +59,7 @@
     <div id="default">
       <p>
         <input type="text" />
+        <a href="#" class="add">Add</a> |
         <a href="#" class="clear">Clear</a>
       </p>
     </div>
@@ -61,6 +68,7 @@
     <div id="reverse">
       <p>
         <input type="text" />
+        <a href="#" class="add">Add</a> |
         <a href="#" class="clear">Clear</a>
       </p>
     </div>
@@ -69,6 +77,7 @@
     <div id="limitless">
       <p>
         <input type="text" />
+        <a href="#" class="add">Add</a> |
         <a href="#" class="clear">Clear</a>
       </p>
     </div>
