--- a/timer/index.html
+++ b/timer/index.html
@@ -25,11 +25,6 @@
         });
       });
     </script>
-    <!--
-      NOTE: do not include anything else in here!
-        all the styles and builds will be handled
-        automatically by the development server
-    -->
   </head>
   <body>
     <h1>Timer Demo</h1>
@@ -38,8 +33,8 @@
     <div id="standard">
       <p class="timer"></p>
       <p>
-        <a href="" class="start">Start</a>
-        <a href="" class="stop">Stop</a>
+        <a href="" class="start">Start</a> |
+        <a href="" class="stop">Stop</a>   |
         <a href="" class="reset">Reset</a>
       </p>
     </div>
@@ -48,8 +43,8 @@
     <div id="with-hours">
       <p class="timer"></p>
       <p>
-        <a href="" class="start">Start</a>
-        <a href="" class="stop">Stop</a>
+        <a href="" class="start">Start</a> |
+        <a href="" class="stop">Stop</a>   |
         <a href="" class="reset">Reset</a>
       </p>
     </div>
@@ -58,8 +53,8 @@
     <div id="milli">
       <p class="timer"></p>
       <p>
-        <a href="" class="start">Start</a>
-        <a href="" class="stop">Stop</a>
+        <a href="" class="start">Start</a> |
+        <a href="" class="stop">Stop</a>   |
         <a href="" class="reset">Reset</a>
       </p>
     </div>
