Mines: adding the basic styles

--- a/mines/index.html
+++ b/mines/index.html
@@ -13,6 +13,10 @@
   <body>
     <h1>Mines Game Demo</h1>
 
-    <div id="game-container"></div>
+    <p>
+      <div id="game-container"></div>
+    </p>
+
+    <p class="white-space"></p>
   </body>
 </html>
